# docs

./: JetBrains-MCP-Server-分享文档.md  test-healing-squad-config.md  workflow-overview.md  基于 Multica 的多 Agent 自动化测试与自愈系统方案设计.md  本地自动化测试与自愈系统.md  自动化测试框架实现思路.md
multica-test-automation/: .gitignore  AGENTS.md  README.md  multica-workspace.yaml  pyproject.toml
multica-test-automation/cases/: e2e_cases.yaml
multica-test-automation/config/: mcp-servers.example.json  project.example.yaml
multica-test-automation/docs/: multica-setup.md
multica-test-automation/scripts/: install-multica.ps1  verify-mcp.ps1
multica-test-automation/skills/backend-monitor/: SKILL.md
multica-test-automation/skills/browser-automation/: SKILL.md
multica-test-automation/skills/frontend-monitor/: SKILL.md
multica-test-automation/skills/orchestrator/: SKILL.md
multica-test-automation/src/auto_test_healer/: __init__.py  adapters.py  cases.py  cli.py  contracts.py  models.py  monitoring.py  orchestration.py  reporting.py
multica-test-automation/tests/: test_loop.py
