[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multica-test-automation"
version = "0.1.0"
description = "Configurable local test orchestration and self-healing framework"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
auto-test-healer = "auto_test_healer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
